--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ textarea {
   line-height: 1.5;
 }
 
+button{
+  font-size:16px;
+  font-weight: bold;
+  color: rgb(184, 8, 184);
+  padding:0.5rem 1rem;
+}
+
 body {
     padding: 0 3rem;
     background-color: #404040;
@@ -30,4 +37,8 @@ p {
 
 .title--main {
   margin-block-end: 0;
+}
+
+a {
+  color: thistle; 
 }
