--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -17,8 +17,9 @@ fieldset {
     z-index: 1;
     min-height: 30rem;
     min-width: 20rem;
-    background-color: hsla(0, 0%, 20%, 0.8);
+
     background-blend-mode: overlay;
+    /* To not repeat the image beyond it's scale */
     background-repeat: no-repeat;
 
     /* for close button absolute position */
@@ -27,10 +28,14 @@ fieldset {
     border-radius: 20px;
     overflow: hidden;
 
-    /* 
-    background: transparent;
-    backdrop-filter: blur(20px); 
-    */
+    /* for a glassmorphism effect */
+    /** Smooth transition to the bottom from a greyish to a less greyish color **/
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
+    /** A blur effect behind the form **/
+    backdrop-filter: blur(20px);
+    /** Thick box shadow with a greyish background on the right, bottom, with a blurred shadow **/
+    box-shadow: 10px 10px 10px rgba(30, 30, 30, 0.5);
+
 
     margin: 5rem;
     padding: 2rem
@@ -48,8 +53,10 @@ fieldset {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
+    /** Visible color **/
+    color: white;
+    /** Dark background with some opacity **/
+    background-color: #222;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: .25rem;
