--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,89 +1,102 @@
 body {
-    background-color: #0e0e0e;
-    color: white;
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-  }
+  background-color: #0e0e0e;
+  color: white;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+}
 
-  /* Dark Mode */
-  body.dark-mode {
-    background-color: #0e0e0e;
-    color: white;
-  }
+/* Dark Mode */
+body.dark-mode {
+  background-color: #0e0e0e;
+  color: white;
+}
 
-  /* Link Colors */
-  a {
-    color: thistle;
-    text-decoration: none;
-  }
+/* Link Colors */
+a {
+  color: thistle;
+  text-decoration: none;
+}
 
-  a:hover {
-    text-decoration: underline;
-  }
+a:hover {
+  text-decoration: underline;
+}
 
-  /* Main Section Styling */
-  .main-section {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+/* Main Section Styling */
+.main-section {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
-  /* Header Styling */
-  .main-section header {
-    text-align: center;
-    margin-bottom: 20px;
-    background-color: purple;
-  }
+/* Header Styling */
+.main-section header {
+  text-align: center;
+  margin-bottom: 20px;
+  background-color: purple;
+}
 
-  .main-section h1 {
-    color: thistle;
-    display: inline-block;
-  }
+.biz-name-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .main-section h2 {
-    color: purple;
-  }
 
-  /* Contact Form Styling */
-  .main-section form {
-    margin-top: 20px;
-  }
+.main-section h1 {
+  font-size: x-large;
+  white-space: nowrap;
+  margin: 0;
+  padding: 0;
+}
 
-  .main-section label {
-    display: block;
-    margin-bottom: 5px;
-    color: purple;
-  }
+.main-section h2 {
+  font-size: large;
+  white-space: nowrap;
+  margin: 0;
+  padding: 0;
+}
 
-  input[type="text"],
-  textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    background-color: #222;
-    border: 1px solid rebeccapurple;
-    color: white;
-    resize: vertical;
-  }
+/* Contact Form Styling */
+.main-section form {
+  margin-top: 20px;
+}
 
-  input[type="submit"] {
-    background-color: rebeccapurple;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
+.main-section label {
+  display: block;
+  margin-bottom: 5px;
+  color: purple;
+}
 
-  /* Footer Styling */
-  footer {
-    font-size: x-small;
-    text-align: center;
-    margin-top: 20px;
-    color: white;
-  }
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: #222;
+  border: 1px solid rebeccapurple;
+  color: white;
+  resize: vertical;
+}
 
- /*  Nav Bar */
- .main-section nav li {
+input[type="submit"] {
+  background-color: rebeccapurple;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+/* Footer Styling */
+footer {
+  font-size: x-small;
+  text-align: center;
+  margin-top: 20px;
+  color: white;
+}
+
+/*  Nav Bar */
+.main-section nav li {
   display: inline;
   padding-right: 1rem;
 }
